--- a/index.html
+++ b/index.html
@@ -76,29 +76,39 @@
             <h2>Trending now near you</h2>
             <div class="cards-container">
                 <div class="card">
-                    <img src="./Assets/card2img.jpeg" class="card-img">
-                    <p class="card-title">Top 50 - Global</p>
-                    <p class="card-info">Your daily updates of the most played tracks...</p>
+                    <img src="./Assets/card13.jpeg" class="card-img">
+                    <p class="card-title">Hua Main</p>
+                    <p class="card-info">Pritam Chakraborty and Raghav Chaitanya
+                    </p>
                 </div>
                 <div class="card">
-                    <img src="./Assets/card3img.jpeg" class="card-img">
-                    <p class="card-title">Top 50 - Global</p>
-                    <p class="card-info">Your daily updates of the most played tracks...</p>
+                    <img src="./Assets/card11.jpeg" class="card-img">
+                    <p class="card-title">Pal</p>
+                    <p class="card-info">Shreya Ghoshal, Arijit Singh</p>
                 </div>
                 <div class="card">
-                    <img src="./Assets/card4img.jpeg" class="card-img">
-                    <p class="card-title">Top 50 - Global</p>
-                    <p class="card-info">Your daily updates of the most played tracks...</p>
+                    <img src="./Assets/card12.jpeg" class="card-img">
+                    <p class="card-title">Channa Ve</p>
+                    <p class="card-info">Akhil Sachdeva and Mansheel Gujral
+                    </p>
                 </div>
                 <div class="card">
-                    <img src="./Assets/card3img.jpeg" class="card-img">
-                    <p class="card-title">Top 50 - Global</p>
-                    <p class="card-info">Your daily updates of the most played tracks...</p>
+                    <img src="./Assets/card8.jpeg" class="card-img">
+                    <p class="card-title">Heeriye</p>
+                    <p class="card-info"> Arijit Singh and Jasleen Royal
+                    </p>
                 </div>
                 <div class="card">
-                    <img src="./Assets/card4img.jpeg" class="card-img">
-                    <p class="card-title">Top 50 - Global</p>
-                    <p class="card-info">Your daily updates of the most played tracks...</p>
+                    <img src="./Assets/card9.jpeg" class="card-img">
+                    <p class="card-title">Sajni Re</p>
+                    <p class="card-info"> Arijit Singh
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/card10.jpeg" class="card-img">
+                    <p class="card-title">Raanjhan</p>
+                    <p class="card-info">Parampara Thakur
+                    </p>
                 </div>
             </div>
             <h2>Featured Charts</h2>
@@ -119,11 +129,217 @@
                     <p class="card-info">Your daily updates of the most played...</p>
                 </div>
             </div>
+            <h2>Your Top Mixes</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="./Assets/english1.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Song by Ellie Goulding
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/english4.jpeg" class="card-img">
+                    <p class="card-title">Top Songs - World</p>
+                    <p class="card-info">Song by Pink Sweats
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/english3.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Song by Stephen Sanchez</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/english6.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Song by Ellie Goulding and Juice WRLD
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/english5.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Song by Elley Duhé
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/english2.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Against The Current, Alan Walker, League of Legends, Mako</p>
+                </div>
+            </div>
+            <h2>Today's Biggest Hits</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="./Assets/punjabi1.jpeg" class="card-img">
+                    <p class="card-title">Nanchaku </p>
+                    <p class="card-info">Song by Seedhe Maut</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/punjabi2.jpeg" class="card-img">
+                    <p class="card-title">Admirin' You</p>
+                    <p class="card-info">Song by Karan Aujla</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/punjabi3.jpeg" class="card-img">
+                    <p class="card-title">Tu</p>
+                    <p class="card-info">Song by Talwiinder</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/punjabi4.jpeg" class="card-img">
+                    <p class="card-title">Suniyan Suniyan</p>
+                    <p class="card-info">Song by Juss and MixSingh
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/punjabi5.jpeg" class="card-img">
+                    <p class="card-title">Flower & Saints</p>
+                    <p class="card-info">Song by Prem Dhillon
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/punjabi7.jpeg" class="card-img">
+                    <p class="card-title">Born to Shine</p>
+                    <p class="card-info">Song by Diljit Dosanjh</p>
+                </div>
+            </div>
+            <h2>Popular Singer's</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="./Assets/radio1.jpeg" class="card-img">
+                    <p class="card-title">Arijit Singh</p>
+                    <p class="card-info">With Sachin-Jigar, Vishal-Shekhar,Amit..</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/radio2.jpeg" class="card-img">
+                    <p class="card-title">Shreya Ghoshal</p>
+                    <p class="card-info">With A.R. Rehman, Vishal-Shekhar</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/radio3.jpeg" class="card-img">
+                    <p class="card-title">A.R. Rehman</p>
+                    <p class="card-info">With Anirudh Ravichander, Harris..</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/radio5.jpg" class="card-img">
+                    <p class="card-title">Sunidhi Chauhan</p>
+                    <p class="card-info">With Armaan malik, Atif Aslam</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/radio4.jpeg" class="card-img">
+                    <p class="card-title">Honey Singh</p>
+                    <p class="card-info">With Badshah, Diljit Dosanjh</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/radio6.webp" class="card-img">
+                    <p class="card-title">Darshan Raval</p>
+                    <p class="card-info">With Arjun Kanungo,Dino James</p>
+                </div>
+                
+            </div>
+            <h2>More of what you like </h2>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="./Assets/hindi1.jpeg" class="card-img">
+                    <p class="card-title">Chaleya</p>
+                    <p class="card-info"> Arijit Singh and Shilpa Rao</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/hindi2.jpeg" class="card-img">
+                    <p class="card-title">Half Girlfriend</p>
+                    <p class="card-info">Ash King and Shashaa Tirupati
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/hindi3.jpeg" class="card-img">
+                    <p class="card-title">Dariya</p>
+                    <p class="card-info">Arko Pravo Mukherjee
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/hindi4.jpeg" class="card-img">
+                    <p class="card-title">Khali Khali Dil</p>
+                    <p class="card-info"> Armaan Malik and Payal Dev</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/hindi5.jpeg" class="card-img">
+                    <p class="card-title">Intezaar</p>
+                    <p class="card-info">Mithoon</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/hindi6.jpeg" class="card-img">
+                    <p class="card-title">Apna Bana Le</p>
+                    <p class="card-info">Arijit Singh and Sachin–Jigar</p>
+                </div>
+            </div>
+            <h2>Recommended for you</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="./Assets/today1.jpeg" class="card-img">
+                    <p class="card-title">Shershaah</p>
+                    <p class="card-info">Tanishk Bagchi, Javed Mohsin</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/today2.jpeg" class="card-img">
+                    <p class="card-title">Kabir Singh</p>
+                    <p class="card-info">Sachet Tandon, Sachet Parampara</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/today3.jpeg" class="card-img">
+                    <p class="card-title">Samjho Na</p>
+                    <p class="card-info">Aditya Rikhari</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/today4.jpeg" class="card-img">
+                    <p class="card-title">Bikhra</p>
+                    <p class="card-info">Abdul Hannan,Rovalio</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/today5.jpeg" class="card-img">
+                    <p class="card-title">Iraaday</p>
+                    <p class="card-info">Rovalio,Abdul Hannan</p>
+                </div>
+                <div class="card">
+                    <img src="./Assets/today6.jpeg" class="card-img">
+                    <p class="card-title">The Local Train</p>
+                    <p class="card-info"></p>
+                </div>
+            </div>
             <div class="footer">
                 <div class="line"></div>
             </div>
         </div>
-        <div class="music-player">music player</div>
+        <div class="music-player">
+            <div class="album">
+                <img src="./Assets/baarish.jpeg" class="album-img">
+                <p class="album-txt">Baarish<br>Ash King and Shashaa Tirupati</p>
+            </div>
+            <div class="player">
+                <div class="player-control">
+                    <img src="./Assets/player_icon1.png" class="player-control-icon">
+                    <img src="./Assets/player_icon2.png" class="player-control-icon">
+                    <img src="./Assets/player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;">
+                    <img src="./Assets/player_icon4.png" class="player-control-icon">
+                    <img src="./Assets/player_icon5.png" class="player-control-icon">
+
+                </div>
+                 <div class="playback-bar"> 
+                    <span class="curr-time">00:00</span>
+                    <input type="range" min="0" max="100" class="progress-bar" step="1">
+                    <span class="tot-time">3:33</span>
+                </div>
+            </div>
+           <div class="control">
+            <i class="fa-solid fa-jar"></i>
+            <i class="fa-solid fa-microphone-lines"></i>
+            <i class="fa-solid fa-server"></i>
+            <i class="fa-solid fa-computer"></i>
+            <label for="volume"><i class="fa-solid fa-volume-high"></i></label>
+            <input type="range" id="volume" name="volume" min="0" max="100" />
+            <i class="fa-solid fa-window-maximize"></i>
+            <i class="fa-solid fa-down-left-and-up-right-to-center"></i>
+
+
+
+           </div>  
     </div>
 </body>
 </html>
